Devops_Srijitha_Maam/K8S/Services/ClusterIPServicesExample/IngressService/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: myapp.com

      http:
        paths:
          - path: /

            pathType: Prefix

            backend:
              service:
                name: frontend-service

                port:
                  number: 80
